2014-03-17  Dmitry Gutov  <dgutov@yandex.ru>

	* newcomment.el (comment-beginning): If `comment-start-skip'
	doesn't match, move back one char and try again.  (Bug#16971)

	* emacs-lisp/lisp-mode.el (lisp-mode-variables): Set
	`comment-use-syntax' to t to avoid the unnecessary runtime check.
	Set `comment-start-skip' to a simpler value that doesn't try to
	check if the semicolon is escaped (this is handled by
	`syntax-ppss' now).  (Bug#16971)

	* progmodes/scheme.el (scheme-mode-variables): Same.

2014-03-16  Martin Rudalics  <rudalics@gmx.at>

	Fix behavior of with-temp-buffer-window (Bug#16816, Bug#17007).
	* window.el (with-temp-buffer-window): Don't make BUFFER-OR-NAME
	current (Bug#16816, Bug#17007).
	(with-current-buffer-window): New macro doing the same as
	`with-temp-buffer-window' but with BUFFER-OR-NAME current.
	* help.el (help-print-return-message): Warn in doc-string to not
	use this in `with-help-window'.
	(describe-bindings-internal): Call `describe-buffer-bindings'
	from within help buffer.  See Juanma's scenario in (Bug#16816).
	(with-help-window): Update doc-string.
	* dired.el (dired-mark-pop-up):
	* files.el (save-buffers-kill-emacs):
	* register.el (register-preview): Use `with-current-buffer-window'
	instead of `with-temp-buffer-window'.

2014-03-16  Juanma Barranquero  <lekktu@gmail.com>

	* textmodes/rst.el (rst-arabic-to-roman, rst-roman-to-arabic):
	Implement inserting into current buffer, documented in their docstrings.
	(rst-define-key, rst-compare-adornments, rst-insert-list-new-item)
	(rst-section-tree-point, rst-forward-section, rst-indent)
	(rst-compute-tabs, rst-font-lock-find-unindented-line-end)
	(rst-font-lock-find-unindented-line-limit, rst-adornment-level)
	(rst-font-lock-handle-adornment-pre-match-form)
	(rst-repeat-last-character): Reflow docstrings.
	(rst-preferred-adornments, rst-update-section, rst-find-title-line)
	(rst-adjust-adornment-work, rst-initial-items, rst-insert-list)