@@ -1,3 +1,11 @@
+2014-03-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp.el (tramp-action-out-of-band): Read pending output.
+	(tramp-call-process): Trace also DESTINATION.
+
+	* net/tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band):
+	Quote file names when they are local.  Remove superfluous trace.
+
 2014-03-17  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* newcomment.el (comment-beginning): If `comment-start-skip'
